--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1004624900638:ios:03309bc1880f23d93df40f",
-  "FIREBASE_PROJECT_ID": "cartexample-fd2cf",
-  "GCM_SENDER_ID": "1004624900638"
+  "GOOGLE_APP_ID": "1:568266338396:ios:050fef7919f8404eb47699",
+  "FIREBASE_PROJECT_ID": "fir-mvc-305b6",
+  "GCM_SENDER_ID": "568266338396"
 }
