--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1004624900638:ios:c03b5efffc4b692b3df40f",
-  "FIREBASE_PROJECT_ID": "cartexample-fd2cf",
-  "GCM_SENDER_ID": "1004624900638"
+  "GOOGLE_APP_ID": "1:568266338396:ios:eacb473e8aaf6bdfb47699",
+  "FIREBASE_PROJECT_ID": "fir-mvc-305b6",
+  "GCM_SENDER_ID": "568266338396"
 }
