--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core:
   firebase_auth:
   cloud_firestore:
+  shared_preferences:
+  uuid:
 
 dev_dependencies:
   flutter_test:
